tests/suite/similar-names/fail/FailDataConstructor2.stderr

tests/suite/similar-names/fail/FailDataConstructor2.hs:5:14: error:
    Multiple declarations with names differing only in case.
    Declared at: tests/suite/similar-names/fail/FailDataConstructor2.hs:4:14
                 tests/suite/similar-names/fail/FailDataConstructor2.hs:5:14
